--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
         - docker
 
 before_install:
-        - docker build -t vpmaddur/Docker-React -f Dockerfile.dev .
+        - docker build -t vpmaddur/docker-react -f Dockerfile.dev .
 
 script:
         - docker run -e CI=true vpmaddur/Docker-React npm run test -- --coverage
